@@ -23,11 +23,6 @@ CModificationVariable.1=Unable to set value.
 CStackFrame.0={0} at {1}: {2}
 CThread.0=Stack is not available: {0}.
 CThread.1=Stack is not available: {0}.
-CThread.2=Resume failed.
-CThread.3=Suspend failed.
-CThread.4=Step failed.
-CThread.5=Step failed.
-CThread.6=Step failed.
 CValue.0=not available: {0} 
 CVariable.0=not available: {0}
 CVariable.1=not available: {0}
