@@ -1,4 +1,10 @@
 2005-01-10 Mikhail Khodjaiants
+	Use the asynchronous implementation for resume, suspend, step etc provided by eclipse 3.1.
+	* CDebugTarget.java
+	* CThread.java
+	* CoreModelMessages.properties
+
+2005-01-10 Mikhail Khodjaiants
 	Bug 73168: Use memory view provided by Eclipse platform in CDT.
 	* ICType.java
 	* CType.java
